# gravity_compensation

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  createContainer.sh  package.xml
bag/2025-12-05-21-20-43/: 2025-12-05-21-20-43_0.db3
launch/: check_robot.launch.py
meshes/: XM,H-430_idler_Component5_v1_1.stl  XM,H-430_idler_Component5_v1__2__1.stl  XM,H-430_idler_Component5_v1__3__1.stl  XM,H-430_idler_Component5_v1__4__1.stl  XM,H-430_idler_Component5_v1__5__1.stl  XM,H-430_idler_Component5_v2_1.stl  XM,H-430_idler_Component5_v2__2__1.stl  XM,H-430_idler_Component5_v2__3__1.stl  XM,H-430_idler_Component5_v2__4__1.stl  XM,H-430_idler_Component5_v2__5__1.stl  XM,H-430_idler_Component5_v2__6__1.stl  base_link.stl  gripper_01_v1_1.stl  gripper_02_v1_1.stl  piper_01_v1_1.stl  piper_01_v3_1.stl  piper_02_v1_1.stl  piper_02_v2_1.stl  piper_03_v1_1.stl  piper_03_v2_1.stl  piper_04_v2_1.stl  piper_04_v3_1.stl  piper_05_v1_1.stl  piper_05_v2_1.stl
rviz/: easyController_view.rviz
src/: gravity_node.cpp
urdf/: my_robot.urdf
